set up component files and passed props from app to nav

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@ footer {
   position: absolute;
   bottom: 0;
 }
+
+li {
+  cursor: pointer;
+  width: min-content;
+}
+.navActive {
+  color: red;
+}
