added images to portfolio

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,35 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
   color: white;
+  font-family: 'Roboto';
   background-color: black;
 }
+
+main {
+  min-height: 74vh;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+h1 {
+  font-size: 2.5em;
+  margin-right: .5em;
+  margin-top: .25em;
+  align-self: center;
+}
+
+nav li {
+  list-style: none;
+}
+
 
 .icon {
   height: 40px;
@@ -18,7 +44,38 @@ footer {
 li {
   cursor: pointer;
   width: min-content;
+  font-weight: bold;
+  font-size: 1.25em;
 }
+
 .navActive {
-  color: red;
+  text-shadow: 0px -1px 10px rgb(251, 255, 0);
+  border-bottom: 1px solid white
+}
+
+.project {
+  width: min-content;
+  margin: 2em auto;
+  line-height: 2em;
+}
+
+footer {
+  background: black;
+  display: flex;
+  justify-content: space-evenly;
+  border-top: 1px solid white;
+}
+
+footer a {
+  margin: 1em 0;
+}
+
+ul {
+  display: flex;
+  justify-content: space-evenly;
+  margin: .5em 0 .5em 0;
+}
+
+.screenshot {
+  height: 300px;
 }
