--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ li {
 }
 
 .project {
-  width: min-content;
+  width: 90%;
   margin: 2em auto;
   line-height: 2em;
 }
@@ -77,5 +77,37 @@ ul {
 }
 
 .screenshot {
-  height: 300px;
+  max-width: 90vw;
+}
+
+#about-section {
+  margin-top: 1em;
+  line-height: 2em;
+}
+.self {
+  width: 80%;
+  margin: 0 auto;
+  display: block;
+  border-radius: 10px;
+}
+
+#caption {
+  font-style:italic;
+  text-align: center;
+  margin-bottom: 2em;
+}
+
+#write-up {
+  width: 90%;
+  margin: 0 auto;
+}
+
+#main-p {
+  line-height: 1.5em;
+  text-indent: 2em;
+  margin-top: 1em;
+}
+
+#sign-off {
+  text-indent: 1em;
 }
