--- a/src/index.css
+++ b/src/index.css
@@ -98,11 +98,13 @@ ul {
 }
 
 #write-up {
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
+  font-size: 1.5em;
 }
 
 #main-p {
+  font-size: 1rem;
   line-height: 1.5em;
   text-indent: 2em;
   margin-top: 1em;
@@ -110,4 +112,37 @@ ul {
 
 #sign-off {
   text-indent: 1em;
+}
+
+.heading {
+  text-align: center;
+  font-size: 2em;
+  margin-top: 1em;
+}
+
+#contact-form {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.form-line {
+  display: flex;
+  flex-direction: column;
+  line-height: 2em;
+  margin: 1em;
+}
+
+input {
+  /* height: 3em; */
+  font-size: 1.5em;
+  height: 1.5em;
+}
+
+button {
+  color: red;
+  width: 90%;
+  display: block;
+  margin: 2em auto;
+  height: 3em;
+  font-size: 1.5em;
 }
