--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto'
 }
 
 body {
   color: white;
-  font-family: 'Roboto';
   background-color: black;
 }
 
