--- a/src/index.css
+++ b/src/index.css
@@ -167,6 +167,10 @@ button {
 }
 .screenshot {
   max-width: 90vw;
+  border-radius: 1em;
+  border: 1px solid black;
+  outline: 3px solid rgb(236, 236, 236);
+  margin-bottom: 1em;
 }
 
 .project {
@@ -203,6 +207,7 @@ button {
   text-shadow: 1px 1px 2px black;
   border-left: 1px solid white;
   border-right: 1px solid white;
+  border-top: 1px solid white;
 }
 
 .tech-line {
